@@ -1,1 +1,0 @@
-PySoulSeek is a client for SoulSeek filesharing system.
