@@ -1,68 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2003/09/14 16:43:54 recht Exp $
-bin/pyslsk
-bin/pyslsk-import-winconfig
-${PYSITELIB}/pysoulseek/__init__.py
-${PYSITELIB}/pysoulseek/__init__.pyc
-${PYSITELIB}/pysoulseek/__init__.pyo
-${PYSITELIB}/pysoulseek/config.py
-${PYSITELIB}/pysoulseek/config.pyc
-${PYSITELIB}/pysoulseek/config.pyo
-${PYSITELIB}/pysoulseek/mp3.py
-${PYSITELIB}/pysoulseek/mp3.pyc
-${PYSITELIB}/pysoulseek/mp3.pyo
-${PYSITELIB}/pysoulseek/pysoulseek.py
-${PYSITELIB}/pysoulseek/pysoulseek.pyc
-${PYSITELIB}/pysoulseek/pysoulseek.pyo
-${PYSITELIB}/pysoulseek/slskmessages.py
-${PYSITELIB}/pysoulseek/slskmessages.pyc
-${PYSITELIB}/pysoulseek/slskmessages.pyo
-${PYSITELIB}/pysoulseek/slskproto.py
-${PYSITELIB}/pysoulseek/slskproto.pyc
-${PYSITELIB}/pysoulseek/slskproto.pyo
-${PYSITELIB}/pysoulseek/transfers.py
-${PYSITELIB}/pysoulseek/transfers.pyc
-${PYSITELIB}/pysoulseek/transfers.pyo
-${PYSITELIB}/pysoulseek/utils.py
-${PYSITELIB}/pysoulseek/utils.pyc
-${PYSITELIB}/pysoulseek/utils.pyo
-${PYSITELIB}/pysoulseek/wxgui/__init__.py
-${PYSITELIB}/pysoulseek/wxgui/__init__.pyc
-${PYSITELIB}/pysoulseek/wxgui/__init__.pyo
-${PYSITELIB}/pysoulseek/wxgui/about.py
-${PYSITELIB}/pysoulseek/wxgui/about.pyc
-${PYSITELIB}/pysoulseek/wxgui/about.pyo
-${PYSITELIB}/pysoulseek/wxgui/buttonsplitter.py
-${PYSITELIB}/pysoulseek/wxgui/buttonsplitter.pyc
-${PYSITELIB}/pysoulseek/wxgui/buttonsplitter.pyo
-${PYSITELIB}/pysoulseek/wxgui/chat.py
-${PYSITELIB}/pysoulseek/wxgui/chat.pyc
-${PYSITELIB}/pysoulseek/wxgui/chat.pyo
-${PYSITELIB}/pysoulseek/wxgui/configwindow.py
-${PYSITELIB}/pysoulseek/wxgui/configwindow.pyc
-${PYSITELIB}/pysoulseek/wxgui/configwindow.pyo
-${PYSITELIB}/pysoulseek/wxgui/frame.py
-${PYSITELIB}/pysoulseek/wxgui/frame.pyc
-${PYSITELIB}/pysoulseek/wxgui/frame.pyo
-${PYSITELIB}/pysoulseek/wxgui/images.py
-${PYSITELIB}/pysoulseek/wxgui/images.pyc
-${PYSITELIB}/pysoulseek/wxgui/images.pyo
-${PYSITELIB}/pysoulseek/wxgui/notebook.py
-${PYSITELIB}/pysoulseek/wxgui/notebook.pyc
-${PYSITELIB}/pysoulseek/wxgui/notebook.pyo
-${PYSITELIB}/pysoulseek/wxgui/search.py
-${PYSITELIB}/pysoulseek/wxgui/search.pyc
-${PYSITELIB}/pysoulseek/wxgui/search.pyo
-${PYSITELIB}/pysoulseek/wxgui/sortablelist.py
-${PYSITELIB}/pysoulseek/wxgui/sortablelist.pyc
-${PYSITELIB}/pysoulseek/wxgui/sortablelist.pyo
-${PYSITELIB}/pysoulseek/wxgui/transfers.py
-${PYSITELIB}/pysoulseek/wxgui/transfers.pyc
-${PYSITELIB}/pysoulseek/wxgui/transfers.pyo
-${PYSITELIB}/pysoulseek/wxgui/userinfobrowse.py
-${PYSITELIB}/pysoulseek/wxgui/userinfobrowse.pyc
-${PYSITELIB}/pysoulseek/wxgui/userinfobrowse.pyo
-${PYSITELIB}/pysoulseek/wxgui/userlist.py
-${PYSITELIB}/pysoulseek/wxgui/userlist.pyc
-${PYSITELIB}/pysoulseek/wxgui/userlist.pyo
-@dirrm ${PYSITELIB}/pysoulseek/wxgui
-@dirrm ${PYSITELIB}/pysoulseek
